fixed select styling on firefox

--- a/docs/styleguide/css/inc/_mixins.less
+++ b/docs/styleguide/css/inc/_mixins.less
@@ -57,12 +57,16 @@
 
   @halfGutterWidth: (@gutterWidth / 2);
 
-  .container() {
+  .container-responsive() {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
     .rem(padding-left, @halfGutterWidth);
     .rem(padding-right, @halfGutterWidth);
+  }
+
+  .container() {
+    .container-responsive();
     @media (min-width: unit(@screenSmall, px)) {
       .rem(width, @screenSmall - @gutterWidth);
     }
